--- a/index.html
+++ b/index.html
@@ -2,13 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grade Sheet Generator</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Grade Sheet Generator</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+  <div class="container">
+    <h1>Grade Sheet Generator</h1>
+    <div id="grade-sheet">
+      <div class="row">
+        <input type="text" placeholder="Subject">
+        <input type="number" placeholder="Credit" min="0" step="0.5">
+        <input type="number" placeholder="CT1">
+        <input type="number" placeholder="CT2">
+        <input type="number" placeholder="KSA1">
+        <input type="number" placeholder="KSA2">
+        <input type="number" placeholder="MID">
+        <input type="number" placeholder="Final">
+      </div>
+    </div>
+    <button id="add-subject">+ Add new subject</button>
+    <button id="calculate">Calculate</button>
+    <div id="results"></div>
+    <!-- <button id="print" style="display: none;">Print Grade Sheet</button> -->
+  </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
